--- a/AppExemplo.Domain.Cadastro/AppExemplo.Domain.Cadastro.csproj
+++ b/AppExemplo.Domain.Cadastro/AppExemplo.Domain.Cadastro.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{82B20D60-2C85-407B-B4E2-6C5108CE8597}</ProjectGuid>
+    <ProjectGuid>{46E52D24-AF02-4423-88F8-EA6890792A09}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppExemplo.Domain.Core</RootNamespace>
-    <AssemblyName>AppExemplo.Domain.Core</AssemblyName>
+    <RootNamespace>AppExemplo.Domain.Cadastro</RootNamespace>
+    <AssemblyName>AppExemplo.Domain.Cadastro</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -37,18 +37,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\BaseEntity.cs" />
-    <Compile Include="Entity\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\BaseRepository.cs" />
-    <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Service\IService.cs" />
-    <Compile Include="Specificaton\AndSpecification.cs" />
-    <Compile Include="Specificaton\CompositeSpecification.cs" />
-    <Compile Include="Specificaton\ExpressionSpecification.cs" />
-    <Compile Include="Specificaton\ISpecificaton.cs" />
-    <Compile Include="Specificaton\NotSpecification.cs" />
-    <Compile Include="Specificaton\OrSpecification.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
