--- a/AppExemplo.Domain.Financeiro/AppExemplo.Domain.Financeiro.csproj
+++ b/AppExemplo.Domain.Financeiro/AppExemplo.Domain.Financeiro.csproj
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{82B20D60-2C85-407B-B4E2-6C5108CE8597}</ProjectGuid>
+    <ProjectGuid>{de037ffe-8054-407e-b640-85169b7429af}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppExemplo.Domain.Core</RootNamespace>
-    <AssemblyName>AppExemplo.Domain.Core</AssemblyName>
+    <RootNamespace>AppExemplo.Domain.Financeiro</RootNamespace>
+    <AssemblyName>AppExemplo.Domain.Financeiro</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -37,18 +37,8 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\BaseEntity.cs" />
-    <Compile Include="Entity\IEntity.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\BaseRepository.cs" />
-    <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Service\IService.cs" />
-    <Compile Include="Specificaton\AndSpecification.cs" />
-    <Compile Include="Specificaton\CompositeSpecification.cs" />
-    <Compile Include="Specificaton\ExpressionSpecification.cs" />
-    <Compile Include="Specificaton\ISpecificaton.cs" />
-    <Compile Include="Specificaton\NotSpecification.cs" />
-    <Compile Include="Specificaton\OrSpecification.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -58,4 +48,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+
 </Project>
