--- a/AppExemplo.Domain.Core/AppExemplo.Domain.Core.csproj
+++ b/AppExemplo.Domain.Core/AppExemplo.Domain.Core.csproj
@@ -40,7 +40,7 @@
     <Compile Include="Entity\BaseEntity.cs" />
     <Compile Include="Entity\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\RepositoryBase.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Service\IService.cs" />
     <Compile Include="Specificaton\AndSpecification.cs" />
