--- a/AppExemplo.Data.Cadastro/AppExemplo.Data.Cadastro.csproj
+++ b/AppExemplo.Data.Cadastro/AppExemplo.Data.Cadastro.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Cadastro.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ClienteRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
