--- a/AppExemplo.Data.Core/AppExemplo.Data.Core.csproj
+++ b/AppExemplo.Data.Core/AppExemplo.Data.Core.csproj
@@ -50,13 +50,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\EntityFrameworkRepositoryBase.cs" />
+    <Compile Include="Repository\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AppExemplo.Core\AppExemplo.Core.csproj">
+      <Project>{3c1850b1-3424-4a18-a35b-c48da6dc04b1}</Project>
+      <Name>AppExemplo.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AppExemplo.Domain.Core\AppExemplo.Domain.Core.csproj">
       <Project>{82b20d60-2c85-407b-b4e2-6c5108ce8597}</Project>
       <Name>AppExemplo.Domain.Core</Name>
