--- a/AppExemplo.Domain.Core/AppExemplo.Domain.Core.csproj
+++ b/AppExemplo.Domain.Core/AppExemplo.Domain.Core.csproj
@@ -37,10 +37,11 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\BaseEntity.cs" />
+    <Compile Include="Entity\EntityBase.cs" />
     <Compile Include="Entity\IEntity.cs" />
+    <Compile Include="FilterEntity\FilterEntityBase.cs" />
+    <Compile Include="FilterEntity\IFilterEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\RepositoryBase.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Service\IService.cs" />
     <Compile Include="Specificaton\AndSpecification.cs" />
