--- a/AppExemplo.Domain.Cadastro/AppExemplo.Domain.Cadastro.csproj
+++ b/AppExemplo.Domain.Cadastro/AppExemplo.Domain.Cadastro.csproj
@@ -35,6 +35,14 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <ProjectReference Include="..\AppExemplo.Core.Cadastro\AppExemplo.Core.Cadastro.csproj">
+      <Project>{f57e901b-e2ca-4fe5-918b-c261d54e8fb1}</Project>
+      <Name>AppExemplo.Core.Cadastro</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AppExemplo.Core\AppExemplo.Core.csproj">
+      <Project>{3c1850b1-3424-4a18-a35b-c48da6dc04b1}</Project>
+      <Name>AppExemplo.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AppExemplo.Domain.Core\AppExemplo.Domain.Core.csproj">
       <Project>{82b20d60-2c85-407b-b4e2-6c5108ce8597}</Project>
       <Name>AppExemplo.Domain.Core</Name>
@@ -45,6 +53,8 @@
     <Compile Include="FilterEntity\ClienteFilterEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IClienteRepository.cs" />
+    <Compile Include="Service\ClienteService.cs" />
+    <Compile Include="Service\Interface\IClienteService.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
